# maf-workshop

./: LAB1_IntakeAgent_ServiceDesk_GitHubModels.ipynb  LAB2_Tools_Tickets_ServiceDesk_GitHubModels.ipynb  LAB3_Memoria_ServiceDesk_GitHubModels.ipynb  LAB4_MCP_ServiceDesk_GitHubModels.ipynb  LAB5_Workflow_Multiagente_ServiceDesk.ipynb  LAB6_Workflows_Observability_Visualization.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  thread_state.json
agents/: 00-agente-basico.py  01-agente-mcp-local.py  02-agente-mcp-sse.py  03-workflow secuencial.py  04-workflow-concurrente.py  05-workflow-branching.py  06-agent-observabilidad.py  LAB7_DurableAgents_ServiceDesk.ipynb  requirements-azure.txt
data/: empleados.csv  inventario_it.csv  profiles.json  tickets.csv
doc/: Escenario.md  LAB1_IntakeAgent_ServiceDesk_GitHubModels.md  LAB2_Tools_Tickets_ServiceDesk_GitHubModels.md  LAB3_Memoria_ServiceDesk_GitHubModels.md  LAB4_MCP_ServiceDesk_GitHubModels.md  LAB5_Workflow_Multiagente_ServiceDesk.md  LAB6_Workflows_Observability_Visualization.md  README_DurableAgents_Azure.md
kb/: faq_it.md  faq_rrhh.md  politica_portatiles.md  politica_vacaciones.md
